feat: [BE] AI 리그 영속화, 작업 실행 및 재시작 복구 구현